--- a/src/components/RadialBracketPage/RadialBracketTabs/RadialBracketFonts/RadialBracketFonts.scss
+++ b/src/components/RadialBracketPage/RadialBracketTabs/RadialBracketFonts/RadialBracketFonts.scss
@@ -10,6 +10,9 @@
   &__section {
     font-size: $font-size-tertiary;
     text-align: center;
+    & > * {
+      user-select: none;
+    }
   }
   
   &__options {
@@ -44,6 +47,10 @@
       transform: translateY(-1px);
       background-color: lighten($color-grey-dark-3, 10%);
       box-shadow: 0 .5rem 1rem rgba(0,0,0,0.2);
+    }
+
+    & > * {
+      user-select: none;
     }
   }
 }
