--- a/src/components/Tabs/Tabs.scss
+++ b/src/components/Tabs/Tabs.scss
@@ -13,6 +13,9 @@
   cursor: pointer;
   font-family: $font-display;
   
+  & > * {
+    user-select: none;
+  }
   
   &:hover {
     background-color: $color-grey-light-2;
